fix: remove overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
 	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	overflow: hidden;
 }
 
 a {
